# pyKasso

./: .gitignore  Install instructions with gdal.txt  MANIFEST.in  README.md  TODO.txt  agd-hfm.yaml  environment.yaml  environment.yml  model.txt  pykasso.yaml  pyproject.toml  setup.py  todo.md
.ipynb_checkpoints/: README-checkpoint.md
doc/source/: conf.py  index.rst  pykasso.rst
docs/: doc.py
docs/source/: conf.py  index.rst
lib/: karstnet-1.2.0-py3-none-any.whl
misc/: SIM_SETTINGS.yaml  SKS_SETTINGS.yaml  settings.yaml  statistics.xlsx  todo.py
notebooks/: 2_GeologyManager_class.ipynb  Fandel_et_al_2023_HESS.ipynb  Paper3.ipynb  Untitled.ipynb  _cropped_DEM.tif  betteraz_2D_z430.gslib  class_00_Grid.ipynb  class_01_Polygon.ipynb  class_02_GeologyManager.ipynb  class_03_PointManager.ipynb  class_04_SKS.ipynb  example.ipynb  example_01_quick_introduction.ipynb  example_analysis.ipynb  geo_obstacle.csv  installation_test.ipynb  pyKasso_HFM.ipynb  pyKasso_HFM_Paper.ipynb  pyKasso_HFM_comparison.ipynb  pyKasso_HFM_graph_generation.ipynb  pyKasso_HFM_scratch.ipynb  pyKasso_complex_example.ipynb  pyKasso_simple_example.ipynb  pyKasso_test_update.ipynb  readme.md  simple_example_figure.ipynb  simple_fastmarching_example.ipynb  simple_geology_generator.ipynb  test.pickle  test_SWMM_conversion.ipynb
notebooks/.ipynb_checkpoints/: 0_Grid_class-checkpoint.ipynb  1_Polygon_class-checkpoint.ipynb  2_GeologyManager_class-checkpoint.ipynb  Fandel_et_al_2022_HESS-checkpoint.ipynb  Fandel_et_al_2023_HESS-checkpoint.ipynb  Paper3-checkpoint.ipynb  Untitled-checkpoint.ipynb  class_00_Grid-checkpoint.ipynb  class_03_PointManager-checkpoint.ipynb  class_04_SKS-checkpoint.ipynb  example_02_Betteraz_site-checkpoint.ipynb  pyKasso_HFM-checkpoint.ipynb  pyKasso_HFM_Paper-checkpoint.ipynb  pyKasso_HFM_comparison-checkpoint.ipynb  pyKasso_HFM_graph_generation-checkpoint.ipynb  pyKasso_HFM_scratch-checkpoint.ipynb  pyKasso_complex_example-checkpoint.ipynb  pyKasso_test_update-checkpoint.ipynb  simple_geology_generator-checkpoint.ipynb  test_SWMM_conversion-checkpoint.ipynb
notebooks/Chloe/: Paper3 extras.ipynb  Useful snippets.ipynb  contact181x141.csv  contact200x251.csv  dem181x141.csv  faults181x141.csv  inlets2D_hi_res.txt
notebooks/_a_trier/: Hölloch.ipynb  simple_fastmarching_example.ipynb  simple_geology_generator.ipynb
notebooks/animations/: animation_01.ipynb  animation_02.ipynb  readme.md
notebooks/binder/: binder_01.ipynb
notebooks/class/: class_00_Grid.ipynb  class_01_Polygon.ipynb  class_02_GeologyManager.ipynb  class_02_GeologyManager_2D_case.ipynb  class_02_GeologyManager_3D_case.ipynb  class_03_Fracture.ipynb  class_04_PointManager.ipynb  class_05_SKS.ipynb  class_05_SKS_getters.ipynb
notebooks/colab/: colab_01.ipynb  readme.md
notebooks/examples/: Fandel_et_al_2022_HESS.ipynb  example_01_quick_introduction.ipynb  example_02_Betteraz_site.ipynb  example_03_anisotropy_2D.ipynb  example_analysis.ipynb  example_core.ipynb  paper3.ipynb
notebooks/geometry/: geometry.ipynb  geometry_01.ipynb  geometry_01_.ipynb  geometry_02.ipynb  geometry_03.ipynb  geometry_04.ipynb  geometry_05 copy.ipynb  geometry_05.ipynb  geometry_06.ipynb  geometry_07.ipynb  geometry_08.ipynb  readme.md
notebooks/inputs/: betteraz_cas_1.yaml  betteraz_cas_2.yaml  betteraz_cas_3.yaml
notebooks/misc/: PDF.ipynb  conceptual_model.ipynb  figures.ipynb  generate_geology_csv.ipynb  generate_topography.ipynb  importance_factor.ipynb  subdomains.ipynb
notebooks/old/: pyKasso_HFM_comparison.ipynb  pyKasso_simple_example.ipynb
notebooks/paper/: example_01.ipynb  example_02.html  example_02.ipynb  example_03.html  example_03.ipynb  paper.ipynb  profile_results  readme.md  test.csv
notebooks/sensibility/: autres.ipynb  readme.md  sensibility_01.ipynb
notebooks/test/: a.npy  test.gslib
notebooks/testing/: grid_geometry.ipynb
notebooks/tools/: generate_geology_gslib.ipynb
pykasso/: __init__.py  _current_sks.py  _utils.py  _version.py  base.py  base_paper.py  fracture.py  functions.py  geologymanager.py  grid.py  karstnetwork.py  pointmanager.py  polygon.py  sks.py  swmmpy.py
pykasso.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pykasso/.ipynb_checkpoints/: base-checkpoint.py  swmmpy-checkpoint.py
pykasso/_misc/: SKS_SETTINGS.yaml
pykasso/_typing/: __init__.py  types.py
pykasso/_utils/: array.py  datareader.py  readers.py  validation.py
tests/: test_grid.py
(+489 files in other folders)
