[tool.poetry]
name = "pykasso"
version = "0.1.3"
description = "Python project intended to simulate stochastic karst network"
license = "GPL-3.0"
authors = [
    "François Miville <francois@miville.org>",
    "Chloé Fandel",
    "Philippe Renard"
]
maintainers = [
    "François Miville <francois@miville.org>"
]
readme = "README.md"
homepage = "https://github.com/randlab/pyKasso"
repository = "https://github.com/randlab/pyKasso"
documentation = "" # TODO
keywords = ['hydrogeology', '3-D modeling', 'stochasticity']
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.9",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering",
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.0"
pandas = "^1.5.2"
matplotlib = "^3.6.2"
pyqt5 = "^5.15.9"
openpyxl = "^3.0.10"
mpmath = "^1.2.1"
pyyaml = "^6.0"
agd = "^0.1.31"
scipy = "^1.9.3"
plotly = "^5.13.1"
shapely = "^2.0.1"
karstnet = { file = "lib/karstnet-1.2.0-py3-none-any.whl", optional = true }
networkx = {version = "^3.0", optional = true}
mplstereonet = {version = "^0.6.2", optional = true}
pyvista = {version = "^0.37.0", optional = true}
imageio = {version = "^2.26.1", optional = true}

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.19.4"
jupyter = "^1.0.0"
jupyterlab = "^3.5.2"
ipyvtklink = "^0.2.3"
snakeviz = "^2.1.1"
sphinx = "^6.1.3"
numpydoc = "^1.5.0"

[tool.poetry.extras]
analysis = ["karstnet", "networkx", "mplstereonet"]
visualization = ["pyvista","imageio"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"