[project]
name = "pykasso"
version = "1.0.0"
requires-python = "<3.10"
description = "Python project intended to simulate stochastic karst network"
authors = [
  {name = "François Miville", email = "francois.miville@ikmail.com"},
  {name = "Chloé Fandel"},
  {name = "Philippe Renard"},
]
maintainers = [
    {name = "François Miville", email = "francois.miville@ikmail.com"},
]
license = {file = "LICENSE"}
readme = "README.md"
keywords = ['hydrogeology', '3-D modeling', 'stochasticity']
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.9",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering",
]

[tool.setuptools]
packages = ["pykasso"]

[project.urls]
Homepage = "https://github.com/randlab/pyKasso"
Repository = "https://github.com/randlab/pyKasso"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"