[project]
name = "pykasso"
version = "1.0.1"
requires-python = ">=3.10"
description = "Python project intended to simulate stochastic karst network"
authors = [
  {name = "François Miville", email = "francois.miville@ikmail.com"},
  {name = "Chloé Fandel"},
  {name = "Philippe Renard"},
]
maintainers = [
    {name = "François Miville", email = "francois.miville@ikmail.com"},
]
license = {file = "LICENSE"}
readme = "README.md"
keywords = ['hydrogeology', '3-D modeling', 'stochasticity']
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering",
]
dependencies = [
  'notebook',
  'jupyterlab',
  'ipykernel',
  'ipython',
  'ipywidgets',
  'nbformat',
  'nbclient',
  'numpy',
  'pandas',
  'matplotlib',
  'PyQt5',
  'pillow',
  'Jinja2',
  'openpyxl',
  'mpmath',
  'PyYAML',
  'scipy',
  'plotly',
  'shapely',
  'rasterio',
  'agd',
  'networkx',
  'mplstereonet',
  'pyvista',
  'imageio',
  'trame',
  'trame-vuetify',
  'trame-vtk',
  'karstnet',
]

[tool.setuptools.packages.find]
include = ['pykasso', 'pykasso.*']

[tool.setuptools.package-data]
'pykasso._misc' = ['*']

[project.urls]
Homepage = "https://github.com/randlab/pyKasso"
Repository = "https://github.com/randlab/pyKasso"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"